--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,15 @@
     <string name="app_name">BMI CALCULATOR</string>
     <string name="calculate_your_weight">CALCULATE BMI</string>
     <string name="weight_calculate">Enter your weight(KG)</string>
-    <string name="height_calculate">Enter your height(cm)</string>
+    <string name="height_calculate">Enter your height(M)</string>
     <string name="bmi_result">Your result</string>
-    <string name="calculate_button">  COMPUTE   BMI</string>
+    <string name="calculate_button">  COMPUTE </string>
     <string name="bmi_title">TIP: </string>
     <string name="bmi_content">CONTENT: </string>
+    <string name ="image_display">Image display</string>
+    <string name ="next_button">Next</string>
+    <string name="result_output">Result:</string>
+
 
 
 </resources>
